# Deprecated-Engine3D

./: .gitignore  CMakeLists.txt
Engine3D/OpenGL/: OpenGLTexture3D.h
Engine3D/Renderer3D/: Renderer3D.h
Engine3D/interfaces/: Texture.h
Resources/assets/shaders/: texture3d.glsl
Sandbox/: Application.cpp  CMakeLists.txt  ExampleLayer2D.cpp  ExampleLayer2D.h
Sandbox/Debug/: Sandbox
src/: CMakeLists.txt
src/Engine3D/OpenGL/: OpenGLTexture3D.cpp
src/Engine3D/Renderer2D/: Renderer.cpp
src/Engine3D/Renderer3D/: Renderer3D.cpp
src/Engine3D/interfaces/: Texture.cpp
